--- a/css2/style.css
+++ b/css2/style.css
@@ -115,29 +115,39 @@ nav li:hover, nav li:focus{
 
 .skip a{
 
-position: default;
+position: absolute;
+margin-top: -40px;
 }
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 .skip:focus{
-
-  position: relative;
+margin-top: -20px;
 }
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 
 :focus{
-background-color: blue;
-border: 2px;
+border: 2px solid;
 }
 
 /* Step 4: Write selector/rule property to style the container */
-#container{
-  background-color: red;
-
+@media (min-width:320px){
+.container{
+display: grid;
+grid-template-columns: 1fr 5 fr 1fr;
+gap: 15px;
 }
+
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
+.container > :first-child{
+  grid-column: 1/-1;
+  min-height: 500px;
+  background-image: url('images2/header.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 
 
 
@@ -145,15 +155,90 @@ first div in the grid  and place it in the grid. */
  four rows in the grid. */
 
       /*This will be a lot of rules.... but be strategic and combine seletors*/
-
-
+.about{
+  grid-column: 2/ span 1;
+  grid-row: 2;
+}
+.method{
+  grid-column: 2/ span 1;
+  grid-row: 3;
+}
+.clients{
+  grid-column: 2/ span 1;
+  grid-row:4;
+}
+.contact{
+  grid-column: 2/ span 1;
+  grid-row: 5;
+}
+.about-image{
+  grid-column: 1/-1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 2;
+}
+.method-image{
+  grid-column: 1/-1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 3;
+}
+.clients-image{
+  grid-column: 1/-1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 4;
+}
+.contact-image{
+  grid-column: 1/-1;
+  max-height: 600px;
+  overflow: hidden;
+  grid-row: 5;
+}
  /* Step 8: Write the selector/rule property to style the .text-block class. */
 
-
+.text-block{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 250px;
+  overflow: auto;
+}
+}
 /* Add your media query here */
 
 
   /* Step 9: Write the selector/rule property to style the nav element */
+  @media screen and (min-width: 800px){
+    .nav {
+      position: absolute;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  
+    .container {
+      display: grid;
+      grid-template-columns: 50px auto 500px auto 50px;
+      gap: 15px; 
+    }
+  
+    .about,
+    .clients,
+    .method-image,
+    .contact-image {
+      grid-column: 3 / span 2; /* Begin in the third column and span two columns */
+    }
+  
+    .method,
+    .contact,
+    .about-image,
+    .clients-image {
+      grid-column: 2 / span 2; /* Begin in the second column and span two columns */
+    }
+  }
+  
 
  
   /* Step 10: Write the selector/rule property to update the .container class */
